--- a/Algoritmos-pruebas/index.html
+++ b/Algoritmos-pruebas/index.html
@@ -8,9 +8,29 @@
   </head>
 
   <body>
+
     <div id="app"></div>
     <div id="fizz-buzz"></div>
+    <div>
+      <button class="btn">click event</button>
+    </div>
+
+<p class="upper-case">Dado este texto conviertalo todo a mayusculas </p>
+<p class = "first-upper-case">Dado este texto convierta la primera letra de cada palabra a mayusculas </p>
+
+  <form id="form-message">
+    <label for="input-message">Ingrese el mensaje</label>
+    <input id = "input-message" name = "input-message"/>
+    <button type="submit">Guardar</button>
+  </form>
+
+<ul id="message-list">
+  <li>Tus mensajes son:</li>
+</ul>
+
+<button id="upper-case-btn">Convertir la primera letra de cada palabra a mayusculas </button>
 
     <script src="index.js"></script>
+
   </body>
 </html>
